# jira-telegram-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.rc  build.rs
src/: main.rs  main_single.rs  utils.rs
src/command/: get_issues_api.rs  mod.rs
src/config/: logger_initializer.rs  mod.rs
src/constants/: common_costants.rs  mod.rs  request_constants.rs
src/controller/: get_issues.rs  mod.rs  send_message_to_bot.rs
src/models/: mod.rs
src/models/all_open_issues/: coverted_issues_response.rs  issues_response.rs  mod.rs
src/models/user_data/: user.rs
